name:                repsym
version:             0.1.0.0
synopsis:            representation theory of the symmetric group
description:         Please see README.md
homepage:            https://github.com/danielbarter/repsym.git
license:             BSD3
license-file:        LICENSE
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
copyright:           2015 Daniel Barter
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ContentVector,
                       GameState
  build-depends:       base >= 4.7 && < 5,
                       pretty >= 1.0 && < 2.0,
                       mtl >= 2.0 && < 3.0,
                       transformers >= 0.4 && < 1.0
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danielbarter/repsym.git
